--- a/Guaflix/Guaflix.csproj
+++ b/Guaflix/Guaflix.csproj
@@ -190,12 +190,16 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Guaflix\Index.cshtml" />
+    <Content Include="Views\Guaflix\Login.cshtml" />
+    <Content Include="Views\Peliculas\IngresoPeliculaManual.cshtml" />
+    <Content Include="Views\Guaflix\IngresoPeliculaManual.cshtml" />
+    <Content Include="Views\Guaflix\Catálogo.cshtml" />
+    <Content Include="Views\Peliculas\CargaDePeliculas.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="ArbolesB\" />
     <Folder Include="Views\Default\" />
-    <Folder Include="Views\Peliculas\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
