--- a/Guaflix/Guaflix.csproj
+++ b/Guaflix/Guaflix.csproj
@@ -200,6 +200,8 @@
     <Content Include="Views\Guaflix\CrearUsuario.cshtml" />
     <Content Include="Views\Guaflix\CargarUsuarios.cshtml" />
     <Content Include="Views\Peliculas\ListadoPeliculas.cshtml" />
+    <Content Include="Views\Guaflix\Error.cshtml" />
+    <Content Include="Views\Peliculas\Busqueda.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
