--- a/Guaflix/Guaflix.csproj
+++ b/Guaflix/Guaflix.csproj
@@ -204,6 +204,8 @@
     <Content Include="Views\Peliculas\Busqueda.cshtml" />
     <Content Include="Views\Guaflix\CatalogoUsuario.cshtml" />
     <Content Include="Views\Peliculas\listaEncontrados.cshtml" />
+    <Content Include="Views\Peliculas\AgregarWatch.cshtml" />
+    <Content Include="Views\Peliculas\ListadoPorUsuario.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
